--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.160.0",
+    "typedarray-to-buffer": "^4.0.0",
     "vaul": "^0.9.3",
     "viem": "^1.21.4",
     "wagmi": "^1.4.13",
@@ -87,10 +88,15 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
+    "patch-package": "^8.0.0",
     "postcss": "^8.4.47",
+    "postinstall-postinstall": "^2.1.0",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
+  },
+  "overrides": {
+    "typedarray-to-buffer": "^4.0.0"
   }
 }
